<resources>
    <string name="app_name">DailyReader</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaGFpd2VuemhvdSIsImEiOiJjbDJxZXczajkxanFmM2JrenlnY2lwbTdoIn0.fbx_rYAA-QCdKDBKFnRHZw</string>
    <string name="email_error">Please enter a valid Email</string>
    <string name="password_space_error">Password cannot contain whitespaces</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_length_error">Be at least 9 characters long</string>
    <string name="password_upper_error">At least one uppercase letter</string>
    <string name="password_lower_error">At least one lowercase letter</string>
    <string name="password_num_error">At least one number</string>
    <string name="repeat_password_error">Two passwords must be the same</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="username_space_error">Username cannot contain whitespaces</string>
    <string name="birthday_after_error">Birthday cannot be later than today</string>
    <string name="birthday_empty_error">Please choose a date</string>
    <string name="gender_error">Cant be empty</string>
    <string name="item_book_name">Unknown</string>
    <string name="set_goal_btn">Set Goal</string>
    <string name="goal_view">No goal has set.</string>
    <string name="float_action_btn_description">start work manager</string>
    <string name="weatherHello">Today\'s weather</string>
    <string name="add_book_go_back_btn_descp">Go back</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="finish_setting_btn">Finish Setting</string>
    <string name="ok_btn">OK</string>
    <string name="event_form">Calendar Event</string>
    <string name="event_title">Title: </string>
    <string name="event_location">Location: </string>
    <string name="event_description">Description: </string>
    <string name="syn_btn">SYN NOW</string>
    <string name="event_title_content">Reading Book on DailyReader</string>
    <string name="event_location_content">Anywhere</string>
    <string name="event_description_content">None</string>
    <string name="map_api_key" translatable="false">AIzaSyAf71s8_wNrmB9yL_b7arW3i7TfJ_Z_3Z4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>